<!--

    Copyright 2023 Adobe. All rights reserved.
    This file is licensed to you under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License. You may obtain a copy
    of the License at http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under
    the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR REPRESENTATIONS
    OF ANY KIND, either express or implied. See the License for the specific language
    governing permissions and limitations under the License.

-->
<resources>
    <string name="app_name">TargetTestApp</string>
    <string name="set_tntId">Set Tnt Id</string>
    <string name="get_tntId">Get Tnt Id</string>
    <string name="set_sessionId">Set Session Id</string>
    <string name="get_sessionId">Get Session Id</string>
    <string name="set_thirdPartyId">Set Third Party Id</string>
    <string name="get_thirdPartyId">Get Third Party Id</string>
    <string name="execute_raw_request">Execute Raw Request</string>
    <string name="send_raw_notifications">Send Raw Notifications</string>
</resources>
